# esnb

./: .gitignore  README.md  example.ipynb  pyproject.toml  tools.py
.github/workflows/: python-app.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
src/esnb/: __init__.py
src/esnb/core/: CaseExperiment.py  CaseExperiment2.py  CaseGroup.py  CaseGroup2.py  NotebookDiagnostic.py  RequestedVariable.py  __init__.py  esnb_datastore.py  html.py  mdtf.py  util.py  util2.py  util_xr.py
src/esnb/engine/: __init__.py
src/esnb/nbtools/: __init__.py
src/esnb/sites/: gfdl.py
src/esnb/templates/: MOC_z-space.ipynb  SST_SSS_bias.ipynb  WOA13_yz_bias.ipynb  basic.ipynb  depth_time_drift.ipynb  enso.ipynb  eq_pacific_thermocline_tilt.ipynb  med_outflow.ipynb  mixed_layer_depths.ipynb  northward_heat_transport.ipynb
tests/: test_CaseExperiment.py  test_NotebookDiagnostic.py  test_mdtf.py  test_test.py
